tests/smart_release/changelog/write_and_parse/snapshots/smart_release__changelog__write_and_parse__all_section_types_round_trips_lossy-2.snap
---
source: tests/smart_release/changelog/write_and_parse/mod.rs
expression: md
---
# Changelog

my very own header

## Unreleased

<csr-unknown>
hello
world
<csr-unknown/>

#### 1.0.2-beta.2 (1970-01-01)

* hello world
	this

##### Thanks Clippy

<csr-read-only-do-not-edit/>

[Clippy](https://github.com/rust-lang/rust-clippy) helped 42 times to make code idiomatic. 

##### Commit Statistics

<csr-read-only-do-not-edit/>

 - 100 commits contributed to the release over the course of 32 calendar days.
 - 60 days passed between releases.
 - 20 commits were understood as [conventional](https://www.conventionalcommits.org).
 - 3 unique issues were worked on: [#1](https://github.com/user/repo/issues/1), Uncategorized, [#42](https://github.com/user/repo/issues/42)

##### Commit Details

<csr-read-only-do-not-edit/>

<details><summary>view details</summary>

 * **[#42](https://github.com/user/repo/issues/42)**
    - Just the title ([`e69de29`](https://github.com/user/repo/commit/e69de29bb2d1d6434b8b29ae775ad8c2e48c5392))
    - Another title ([`e69de29`](https://github.com/user/repo/commit/e69de29bb2d1d6434b8b29ae775ad8c2e48c5391))
 * **Uncategorized**
    - Just the title ([`e69de29`](https://github.com/user/repo/commit/e69de29bb2d1d6434b8b29ae775ad8c2e48c5391))
    - Title and body ([`e69de29`](https://github.com/user/repo/commit/e69de29bb2d1d6434b8b29ae775ad8c2e48c5392))
</details>
