tests/smart_release/changelog/write_and_parse/snapshots/smart_release__changelog__write_and_parse__all_section_types_round_trips_lossy-9.snap
---
source: tests/smart_release/changelog/write_and_parse/mod.rs
expression: buf
---
# Changelog

my very own header
