tests/smart_release/changelog/write_and_parse/snapshots/smart_release__changelog__write_and_parse__conventional_write_empty_messages-5.snap
---
source: tests/smart_release/changelog/write_and_parse/mod.rs
expression: buf
---
##### New Features (BREAKING)

 - verbatim `whatever` the _user_ writes [hello](world)
 - this messages comes straight from git conventional and _may_ contain markdown
   first line
   second line
   
   another paragraph
 - spelling. Hello
 - just another user message, this time
   with multiple lines

   and a new paragraph
